# bam-automation

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements-dev.txt
core/: README.md  pyproject.toml
core/bam_core/: constants.py  settings.py
core/bam_core/functions/: analyze_fulfilled_requests.py  analyze_request_snapshots.py  base.py  clean_airtable_views.py  consolidate_eg_requests.py  dedupe_airtable_views.py  params.py  send_dialpad_sms.py  send_dialpad_sms_v2.py  snapshot_airtable_views.py  timeout_eg_requests.py  update_airtable_field_value.py  update_mailjet_lists.py  update_website_request_data.py
core/bam_core/functions/outreach/: README.md  dedupe_tutoring.py  outreach.py  outreach_params.yaml  summarize_tutoring.R  summarize_tutoring.py  update_expected_distro.py  (+3 more)
core/bam_core/lib/: airtable.py  airtable_v2.py  dialpad.py  google.py  mailjet.py  nyc_planning_labs.py  olc.py  opencollective.py  s3.py
core/bam_core/utils/: email.py  etc.py  geo.py  phone.py  retry.py  serde.py
core/scripts/: README.md  consolidate_requests.sh  consolidate_requests_for_distro.sh  dump_schema.py  migrate_requests_to_new_base.py  migrate_test.py  requirements.txt  send_mass_text.py  upload_mailjet_list.py
core/tests/: test_email.py  test_etc.py  test_phone.py  test_security.py  test_serde.py
core/tests/functions/: test_dedupe_airtable_views.py  test_function.py  test_params.py
core/tests/lib/: test_airtable.py  test_airtable_analyze_requests.py  test_olc.py
core/tests/utils/: test_etc.py  test_geo.py  test_phone.py
(+42 files in other folders)
